# chat-to-nextcloud

./: .gitignore  README.md  bot-registration.yaml.example  config.yaml.example  main.py  pyproject.toml
src/: config.py  file_processor.py  path_resolver.py  uploader.py
src/adapters/: base.py  matrix.py  signal.py  telegram.py
tests/: test_config.py  test_file_processor.py  test_matrix_adapter.py  test_path_resolver.py  test_signal_adapter.py  test_telegram_adapter.py  test_uploader.py
